k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-nutrition
spec:
  type: ClusterIP
  selector:
    app: api-nutrition
  ports:
    - protocol: TCP       # Le protocole utilisé (TCP ou UDP, souvent TCP pour les APIs HTTP)
      port: 8080          # Le port exposé par le service dans le cluster (accessible par d'autres pods)
      targetPort: 8080    # Le port sur lequel votre pod écoute (ex: Spring Boot écoute sur 8080)
